--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -334,6 +334,8 @@ For us this is difficult to comprehend. We also tried to increase the number of 
 
 \subsection{Comparison to other project}
 
+Figure \ref{fig:perf_other} shows the performance of the reinforceinforcement learning approach which we mentioned in section \ref{sec:rw}. Figure \ref{fig:our_perf} shows a similar diagram of our performance. You can see that the scores in our application stop to increase around generation 500. This is mainly because of the doodler tries to jump on breakable platforms that we described in the previous section. The performance of the reinforcement learning approach tells us that there is still potatial for improvement in our application.
+
 \begin{figure}
 \centering
 \begin{subfigure}{.4\textwidth}
