--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -73,15 +73,17 @@ Teaching an AI to play a simple game has become an interesting research topic in
 
 We did something similar in our research seminar, but with a less complex game: Doodle Jump. The player of this video game has to jump on randomly located platforms in order to get higher and thus, get a higher score. In our approach we use a genetic algorithm in combination with neural networks for the machine learning part. An artificial neural net (ANN) is a machine learning algorithm inspired by nature. It consists of neurons, which calculate an output based on an input, similar to a biological nerve cell. Those neurons are connected with each other to enable an information flow within the network. In order to improve the performance of an ANN, many parameters --- for example the biases of the neurons or the weight of connections --- can be tuned.
 
-At this point we make use of the genetic algorithm. This algorithm is modelled on biological evolution. There are many individuals which form a population. Applied to our implementation, those are the different neural nets playing the game. After all players died, we select the best of them and perform crossover and mutation on those. Hence, we create a new generation, which is supposed to be better than the previous one. In this way, we always create better and better neural networks.
+At this point we make use of the genetic algorithm. This approach models biological evolution. There are many individuals which form a population. Applied to our implementation, those are the different neural nets playing the game. After all players died, we select the best of them and combine and modify them, resulting in new players. Hence, we create a new generation, which is supposed to be better than the previous one. In this way, we create increasingly better neural networks.
 
-In the next paragraph we present some related work. In the following two sections, we introduce the basics of the Doodle Jump game in detail and give a rough overview of our user interface. After that, we pay special attention to the used neural network. In section \ref{sec:ga} we present our genetic algorithm, in particular with focus on the basic operations of this algorithm and its evaluation. Finally, we conclude our work and show some interesting findings.
+In the next paragraph we present some related work. In the following two sections, we introduce the basics of the Doodle Jump game in detail and give a rough overview of our user interface. After that, we pay special attention to the neural network we used. In section \ref{sec:ga} we present our genetic algorithm, in particular with focus on the basic operations of this algorithm and its evaluation. Finally, we conclude our work and highlight some interesting details.
 
 
 \section{Related work}
 \label{sec:rw}
 
-A broad range of bots playing different games can be found on the internet. We could compare our approach with their work, which does not make sense in terms of comparing the results. For this reason, we use a similar implementation for comparison. The approach of \textit{Shohet et al.}\cite{eshohet} uses reinforcement learning for playing Doodle Jump. The game's implementation they use is exactly the same as we use.
+Genetic algorithms first became popular with \cite{Holland:1975:ANA:531075}. While the concept of computationally simulating a neural net has been around since 1943 (in \cite{McCulloch1943}), and also the idea that certain features of the neural net need to be learned (for example in \cite{Rosenblatt58theperceptron:}), it was only in 1994 that people started combining the two. Initially, the genetic algorithm was only used to modify the network weights \cite{DBLP:conf/ppsn/RonaldS94}, later, it was also meant to modify the network's structure \cite{Stanley:2002:ENN:638553.638554}.
+
+Now, a broad range of bots using a wide variety of leaning approaches playing different games can be found on the internet. We compare our approach to that of \textit{Shohet et al.}\cite{eshohet}, which uses reinforcement learning for playing Doodle Jump. The game's implementation they use is the same as ours.
 
 Shohet uses a Q-Learning algorithm, which is model-free. This technique depends on states. Depending on the current state an action will be calculated in order to go into the next state. Based on the impact of the action a reward will be awarded. If this action has a negative effect, for example the player falls down and dies, the evaluation is bad. Otherwise, it will be positive. Based on those rewards, the algorithm learns when to use which actions in order to become better.
 
