--- a/paper/references.bib
+++ b/paper/references.bib
@@ -7,3 +7,69 @@
   howpublished = {\url{https://github.com/eshohet/doodle-jump-machine-learning}},
   commit = {504d355dc6013dc06461060b6fb2988c5411ca1f}
 }
+
+@book{Holland:1975:ANA:531075,
+ author = {Holland, John H.},
+ title = {Adaptation in Natural and Artificial Systems: An Introductory Analysis with Applications to Biology, Control and Artificial Intelligence},
+ year = {1975},
+ isbn = {0262082136},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+@Article{McCulloch1943,
+author="McCulloch, Warren S.
+and Pitts, Walter",
+title="A logical calculus of the ideas immanent in nervous activity",
+journal="The bulletin of mathematical biophysics",
+year="1943",
+month="Dec",
+day="01",
+volume="5",
+number="4",
+pages="115--133",
+abstract="Because of the ``all-or-none'' character of nervous activity, neural events and the relations among them can be treated by means of propositional logic. It is found that the behavior of every net can be described in these terms, with the addition of more complicated logical means for nets containing circles; and that for any logical expression satisfying certain conditions, one can find a net behaving in the fashion it describes. It is shown that many particular choices among possible neurophysiological assumptions are equivalent, in the sense that for every net behaving under one assumption, there exists another net which behaves under the other and gives the same results, although perhaps not in the same time. Various applications of the calculus are discussed.",
+issn="1522-9602",
+doi="10.1007/BF02478259",
+url="https://doi.org/10.1007/BF02478259"
+}
+
+@ARTICLE{Rosenblatt58theperceptron:,
+    author = {F. Rosenblatt},
+    title = {The Perceptron: A Probabilistic Model for Information Storage and Organization in The Brain},
+    journal = {Psychological Review},
+    year = {1958},
+    pages = {65--386}
+}
+
+@article{Stanley:2002:ENN:638553.638554,
+ author = {Stanley, Kenneth O. and Miikkulainen, Risto},
+ title = {Evolving Neural Networks Through Augmenting Topologies},
+ journal = {Evol. Comput.},
+ issue_date = {Summer 2002},
+ volume = {10},
+ number = {2},
+ month = jun,
+ year = {2002},
+ issn = {1063-6560},
+ pages = {99--127},
+ numpages = {29},
+ url = {http://dx.doi.org/10.1162/106365602320169811},
+ doi = {10.1162/106365602320169811},
+ acmid = {638554},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+ keywords = {competing conventions, genetic algorithms, network topologies, neural networks, neuroevolution, speciation},
+} 
+
+@inproceedings{DBLP:conf/ppsn/RonaldS94,
+  author    = {Edmund M. A. Ronald and
+               Marc Schoenauer},
+  title     = {Genetic Lander: An Experiment in Accurate Neuro-Genetic Control},
+  booktitle = {{PPSN}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {866},
+  pages     = {452--461},
+  publisher = {Springer},
+  year      = {1994}
+}
