fixed some layout bugs

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -342,7 +342,7 @@ Figure \ref{fig:perf_other} shows the performance of the reinforceinforcement le
 \centering
 \begin{subfigure}{.4\textwidth}
   \centering
-  \includegraphics[width=\linewidth]{images/performance_others}
+  \includegraphics[width=0.8\linewidth]{images/performance_others}
   \caption{Performance of reinforcement learning\cite{eshohet}}
   \label{fig:perf_other}
 \end{subfigure}%
