--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,5 @@
 @misc{eshohet,
-  author = {Elliot Shohet, Michael Mathew, Grigor Ambartsumyan, Anmol Singh, Ibrahim Ahmed, Tuan Vu, Haoyao Chen, Inka Arifin, Guranjan Singh, Ronil Singh, Masayuki Takagi, Ahsan Abdullah},
+  author = {Elliot Shohet and Michael Mathew and Grigor Ambartsumyan and Anmol Singh and Ibrahim Ahmed and Tuan Vu and Haoyao Chen and Inka Arifin and Guranjan Singh and Ronil Singh and Masayuki Takagi and Ahsan Abdullah},
   title = {Reinforcement Learning Applied to Doodle Jump},
   year = {2015},
   publisher = {GitHub},
