--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -71,7 +71,7 @@ Games usually have a wide range of possible parameters to tune. Often times, sim
 \section{Introduction}
 Teaching an AI to play a simple game has become an interesting research topic in the last couple of years. AlphaGo\footnote{\url{https://deepmind.com/research/alphago/}} by Google Deepmind is probably the most famous example of computers playing games. The algorithm plays the board game Go, whose complexity is orders of magnitude higher than the complexity of chess. In a tournament against Lee Sedol (one of the world's best Go player) in 2016 the AI won four out of five games.
 
-We did something similar in our research seminar, but with a less complex game: Doodle Jump. The player of this video game has to jump on randomly located platforms in order to get higher and thus, get a higher score. In our approach we use a genetic algorithm in combination with neural networks for the machine learning part. An artificial neural net (ANN) is a machine learning algorithm inspired by nature. It consists of neurons, which calculate an output based on an input, similar to a biological nerve cell. Those neurons are connected with each other to enable an information flow within the network. In order to improve the performance of an ANN, many parameters --- for example the biases of the neurons or the weight of connections --- can be tuned.
+We did something similar in our research seminar, but with a less complex game: Doodle Jump. The player of this video game has to jump on randomly located platforms in order to get higher and thus, get a higher score. In our approach we use a genetic algorithm in combination with neural networks for the machine learning part. An artificial neural net (ANN) is a machine learning algorithm inspired by nature. It consists of neurons, which calculate an output based on an input, similar to a biological nerve cell. Those neurons are connected with each other to enable an information flow within the network. In order to improve the performance of an ANN, many parameters --- for example, the biases of the neurons or the weight of connections --- can be tuned.
 
 At this point we make use of the genetic algorithm. This approach models biological evolution. There are many individuals which form a population. Applied to our implementation, those are the different neural nets playing the game. After all players died, we select the best of them and combine and modify them, resulting in new players. Hence, we create a new generation, which is supposed to be better than the previous one. In this way, we create increasingly better neural networks.
 
@@ -81,7 +81,7 @@ In the next paragraph we present some related work. In the following two section
 \section{Related work}
 \label{sec:rw}
 
-Genetic algorithms first became popular with \cite{Holland:1975:ANA:531075}. While the concept of computationally simulating a neural net has been around since 1943 (in \cite{McCulloch1943}), and also the idea that certain features of the neural net need to be learned (for example in \cite{Rosenblatt58theperceptron:}), it was only in 1994 that people started combining the two. Initially, the genetic algorithm was only used to modify the network weights \cite{DBLP:conf/ppsn/RonaldS94}, later, it was also meant to modify the network's structure \cite{Stanley:2002:ENN:638553.638554}.
+Genetic algorithms first became popular with a paper by John Henry Holland \cite{Holland:1975:ANA:531075}. While the concept of computationally simulating a neural net has been around since 1943 (in \cite{McCulloch1943}), and also the idea that certain features of the neural net need to be learned (for example in \cite{Rosenblatt58theperceptron:}), it was only in 1994 that people started combining the two. Initially, the genetic algorithm was only used to modify the network weights \cite{DBLP:conf/ppsn/RonaldS94}, later, it was also meant to modify the network's structure \cite{Stanley:2002:ENN:638553.638554}.
 
 Now, a broad range of bots using a wide variety of leaning approaches playing different games can be found on the internet. We compare our approach to that of \textit{Shohet et al.}\cite{eshohet}, which uses reinforcement learning for playing Doodle Jump. The game's implementation they use is the same as ours.
 
@@ -96,10 +96,10 @@ The video game Doodle Jump is developed for mobile devices by Lima Sky\footnote{
     \item Regular ones, which neither move nor break
     \item Horizontally moving platforms
     \item Vertically moving platforms
-    \item Vanishable ones, which disappear after jumping on it once
-    \item Breaking platforms, where the doodler can not jump on
+    \item Disappearing ones, which disappear after jumping on it once
+    \item Breaking platforms, where the doodler cannot jump on
 \end{enumerate}
-The platforms are pseudo-randomly located on the map. Pseudo randomly located means, that there will always be at least one platform, which is reachable from the previous one and non-breakable (See Fig. \ref{abb:doodlejumpgame}). In other words, there is always a way to reach an infinite score. However, the higher the achieved score, the more difficult the game becomes. The difficulty is reached via higher distances between the platforms and the increased usage of moving and vanishable platforms.
+The platforms are pseudo-randomly located on the map. Pseudo randomly located means, that there will always be at least one platform, which is reachable from the previous one and non-breakable (See Fig. \ref{abb:doodlejumpgame}). In other words, there is always a way to reach an infinite score. However, the higher the achieved score, the more difficult the game becomes. The difficulty is reached via higher distances between the platforms and the increased usage of moving and disappearing platforms.
 
 The game also includes bonus features, such as propeller hats, jetpacks, rockets, springs or trampolines. These allow the player to jump higher and faster and therefore skip some platforms. Indeed, there are also \quot{enemies} in the game for example monsters, UFOs or black holes. If the doodler hits a monster or comes close to a black hole or UFO, it dies and the game is over. Monsters and UFOs can also be killed by shooting or jumping on them.
 
@@ -122,7 +122,7 @@ Since we do not want to perform the deep learning part on a mobile device or wit
 \item There are no enemies. Hence, the only way to die is falling down.
 \item The feature shooting is not necessary and therefore not available.
 \item The game does not have vertically moving platforms.
-\item The difficulty changes after a certain score, but only through the usage of more moving and vanishable platforms. The distances between the platforms stays the same.
+\item The difficulty changes after a certain score, but only through the usage of more moving and disappearing platforms. The distances between the platforms stays the same.
 \end{itemize}
 
 Our machine learning part runs in the browser as well. We use the \textit{Synaptic} library\footnote{\url{https://github.com/cazala/synaptic}} in order to create our neural networks. This library provides a high level interface to simply initialize a perceptron. Furthermore, we adapted the genetic algorithm implemented in the \textit{Genetic.js} library\footnote{\url{https://github.com/subprotocol/genetic-js}}. Both libraries are written in JavaScript.
@@ -142,9 +142,9 @@ To start the genetic algorithm and inform about the learning progress we impleme
 
 Multiple neural networks are playing concurrently and each of those plays two games with a different platform arrangement. Those numbers (i.e. number of neural networks and number of games played by one neural network) can be configured in our application. However, the screenshot only shows two of those 16 neural networks. Nevertheless, the user can scroll down in the UI to inspect each game which is running at this point. The UI also has buttons to start, stop and resume the games.
 
-If the user wants to speed up the learning progress, the ``Game speed up factor''-slider can be used. With a high speed up factor (e.g. greater than 10) it is often difficult to see why a doodler missed a platform. For that, we implemented a replay feature. This feature is described in section \ref{sec:rdpm}.
+If the user wants to speedup the learning progress, the ``Game speedup factor''-slider can be used. With a high speedup factor (e.g. greater than 10) it is often difficult to see why a doodler missed a platform. For that, we implemented a replay feature. This feature is described in section \ref{sec:rdpm}.
 
-We wanted to add some outputs to inform about the overall learning progress. The outputs ``best score'', ``best fitness'' and ``best score per generation'' are displayed as values. These values help to understand if the neural networks are still improving. If the scores are not increasing, this is a good point to debug what the problem is. For example, the doodler could target platforms that are harder to reach than other platforms. Then the user could disable the speed up and  precisely inspect situations where this happens. During our project this kind of debugging helped a few times. Mostly, we had to adjust the fitness function or input parameters for the genetic algorithm to solve such problems. Some of these details are explained in section \ref{sec:id}.
+We wanted to add some outputs to inform about the overall learning progress. The outputs ``best score'', ``best fitness'' and ``best score per generation'' are displayed as values. These values help to understand if the neural networks are still improving. If the scores are not increasing, this is a good point to debug what the problem is. For example, the doodler could target platforms that are harder to reach than other platforms. Then the user could disable the speedup and  precisely inspect situations where this happens. During our project this kind of debugging helped a few times. Mostly, we had to adjust the fitness function or input parameters for the genetic algorithm to solve such problems. Some of these details are explained in section \ref{sec:id}.
 
 The top right of our UI shows a chart (see Fig. \ref{abb:ui}). This chart contains the average scores of the best players and the average scores of all players. Each point in the chart is a combination of ten generations. This is more meaningful than making one point for each generation because sometimes good neural networks reach bad scores. For example, if the doodlers are unlucky with the random arrangement of platforms.
 
@@ -155,7 +155,7 @@ The result of a long learning process is a neural network which should be able t
 \subsection{Replaying doodler's platform miss}
 \label{sec:rdpm}
 
-During the development of our application we thought that one feature could help us to understand and improve the machine learning component. After a long time of training some games reached very high scores. But the scores stopped to increase as fast as earlier. To see the end of the game we had to wait a long time without using a high speed up factor. Because of that we added a button which replays the last jumps of the doodler and shows how it missed a platform and died. Thereby, a high speed up factor can be used until the doodler dies. The replay button helped us a lot during developing and could be useful for the future work (see section \ref{sec:cafw}).
+During the development of our application we thought that one feature could help us to understand and improve the machine learning component. After a long time of training some games reached very high scores. But the scores stopped to increase as fast as earlier. To see the end of the game we had to wait a long time without using a high speedup factor. Because of that we added a button which replays the last jumps of the doodler and shows how it missed a platform and died. Thereby, a high speedup factor can be used until the doodler dies. The replay button helped us a lot during developing and could be useful for the future work (see section \ref{sec:cafw}).
 
 \section{Network Layout}
 
@@ -190,9 +190,9 @@ The other input parameters have information about the next two platforms. In fut
 \end{center}
 \end{figure}
 
-To clarify how the input parameters are calculated in a specific game state we created an example in figure \ref{abb:ip}. The ``x-velocity'' is $0.2$. So the doodler has almost no horizontal speed. The ``y-velocity'' is $7.8$ which is very high because the doodler just jumped on the blue platform. The next two platforms (the white and the green platform) are used for the input parameters. The white platform is vanishable and the green platform is a regular one (see section \ref{sec:og}). The center of the doodler and of the platforms are used to calculate the relative distances. Regarding the ``relative x-distance'' to the white platform it is shorter to pass through the right wall. So we always check which direction is shorter. In the end the genetic algorithm does not have to know where the walls are. The relative distances to the white platform are $192px$ and $12px$. The relative distances to the green platform are $-80px$ and $67px$. The vertical distances can also be negative when the doodler gets above the platforms. These are the 12 input parameters as an array: $[0.2, 7.8, 193, 12, 0, 0, 0, -80, 67, 0, 0, 0]$.
+To clarify how the input parameters are calculated in a specific game state we created an example in figure \ref{abb:ip}. The ``x-velocity'' is $0.2$. So the doodler has almost no horizontal speed. The ``y-velocity'' is $7.8$ which is very high because the doodler just jumped on the blue platform. The next two platforms (the white and the green platform) are used for the input parameters. The white platform is disappearing and the green platform is a regular one (see section \ref{sec:og}). The center of the doodler and of the platforms are used to calculate the relative distances. Regarding the ``relative x-distance'' to the white platform it is shorter to pass through the right wall. So we always check which direction is shorter. In the end the genetic algorithm does not have to know where the walls are. The relative distances to the white platform are $192px$ and $12px$. The relative distances to the green platform are $-80px$ and $67px$. The vertical distances can also be negative when the doodler gets above the platforms. These are the 12 input parameters as an array: $[0.2, 7.8, 193, 12, 0, 0, 0, -80, 67, 0, 0, 0]$.
 
-The parameters ``has spring'', ``is breakable'' and ``is moving'' are either 0 or 1. Because both input platforms have no spring, are not breakable and are not moving these values are 0 in the example. Since the doodler should jump on each platform only once (even the regular platforms) we do not distinguish vanishable (white) platforms and regular (green) platforms.
+The parameters ``has spring'', ``is breakable'' and ``is moving'' are either 0 or 1. Because both input platforms have no spring, are not breakable and are not moving these values are 0 in the example. Since the doodler should jump on each platform only once (even the regular platforms) we do not distinguish disappearing (white) platforms and regular (green) platforms.
 
 \section{Genetic algorithm}
 \label{sec:ga}
@@ -211,7 +211,7 @@ We want to choose the different parts of the genetic algorithm so that the learn
 
 The fitness function measures the ability of the candidates to play the game well. Doodle Jump already provides a score which measures the height a player achieves. Since the games aim is to maximize that score, we used the score as initial fitness function.
 
-Beyond that, there are many other fitness functions one could think of. For example, at the very beginning of the optimization process, many candidates might do nothing at all, while others move a little bit into the direction of the next platform, but not far enough to actually land on it. All candidates would thus achieve a score of zero, and the primitive fitness function would be unable to discriminate between them. Another fitness function, which rewards candidates that got closer to the platform they failed to jump on might speed up the learning process in the first few generations. It would also be helpful later on, when different candidates might fail at the same platform, thus achieving an equal score. However, such a fitness function would include prior knowledge about how to play the game well. We want to avoid using such fitness functions, since for other problems, prior knowledge might not be available, or might not lead to the optimal solution if available. 
+Beyond that, there are many other fitness functions one could think of. For example, at the very beginning of the optimization process, many candidates might do nothing at all, while others move a little bit into the direction of the next platform, but not far enough to actually land on it. All candidates would thus achieve a score of zero, and the primitive fitness function would be unable to discriminate between them. Another fitness function, which rewards candidates that got closer to the platform they failed to jump on might speedup the learning process in the first few generations. It would also be helpful later on, when different candidates might fail at the same platform, thus achieving an equal score. However, such a fitness function would include prior knowledge about how to play the game well. We want to avoid using such fitness functions, since for other problems, prior knowledge might not be available, or might not lead to the optimal solution if available. 
 
 One measurement that does not involve any prior knowledge is time. Between two candidates, both achieving similar score, where one jumps once on every platform and the other has to jump twice on every platform before attempting the next jump, we want to prefer the first candidate since he is climbing twice as fast. Therefore, the required time should negatively affect the fitness of candidates.
 
@@ -281,14 +281,14 @@ Therefore, we achieve a good diversity between the candidates while still mainta
 
 \subsection{Mutation}
 
-Mutation is one operation we perform on our neural networks. Analogous to mutation in biology it creates genetic diversity on the population. In terms of the perceptron this means conretely, that we change biases of neurons and weights of connections between those neurons. The mutation probability, also called mutation rate, depends on the performce of the previous population compared the current one. If the latest run has better results we decrease the mutation rate, because we do not want to change too much, which could possibly result in worse candidates. If the current run is worse than the one before, we increase the diversity by increasing the mutation probability. This possibility varies between 0.18 and 0.24.
+Mutation is one operation we perform on our neural networks. Analogous to mutation in biology it creates genetic diversity on the population. In terms of the perceptron this means concretely, that we change biases of neurons and weights of connections between those neurons. The mutation probability, also called mutation rate, depends on the performance of the previous population compared the current one. If the latest run has better results we decrease the mutation rate, because we do not want to change too much, which could possibly result in worse candidates. If the current run is worse than the one before, we increase the diversity by increasing the mutation probability. This possibility varies between 0.18 and 0.24.
 
-We perform mutation on the biases of neurons in the same we mutate the weights of the connections. First, we iterate over all elements. Each time a random float between 0 and 1 is created. If this random value is lower then the mutation rate we mutate the element, otherwise not. Then, the bias or weight is changed to the value of the formula $1 + ((Math.random() - 0.5) * 3 + (Math.random() - 0.5))$, which is at least $-1$ and $3$ at maximum.
+We perform mutation on the biases of neurons in the same we mutate the weights of the connections. First, we iterate over all elements. Each time a random float between 0 and 1 is created. If this random value is lower than the mutation rate we mutate the element, otherwise not. Then, the bias or weight is changed to the value of the formula $1 + ((Math.random() - 0.5) * 3 + (Math.random() - 0.5))$, which is at least $-1$ and $3$ at maximum.
 \subsection{Retaining best candidates}
 
-After all games died within one generation we select the top players of this run and reuse them without any modification in the next generation. The amount of retained candidates depends on the performance of the current run compared with the previous one --- similar to the mutation rate. However, the number of players kept is limited to the range of three to five out of 16. The reason, why we have such a complex algorithm is, that we want to a high amount of good players and throw away a large number of bad ones. In order to explain it in detail we use an example which is depicted in graphic \ref{abb:retaining}. It shows the best players of three generations sorted by fitness.
+After all games died within one generation we select the top players of this run and reuse them without any modification in the next generation. The amount of retained candidates depends on the performance of the current run compared with the previous one --- similar to the mutation rate. However, the number of players kept is limited to the range of three to five out of 16. The reason, why we have such a complex algorithm is, that we want to a high number of good players and throw away a large number of bad ones. In order to explain it in detail we use an example which is depicted in graphic \ref{abb:retaining}. It shows the best players of three generations sorted by fitness.
 
-In the first generation we keep all top five players, since we can not compare them to another run. The only requirement is that the best player has a fitness of more than 0. Otherwise, we throw away the whole population due to the bad score.
+In the first generation we keep all top five players, since we cannot compare them to another run. The only requirement is that the best player has a fitness of more than 0. Otherwise, we throw away the whole population due to the bad score.
 
 The second generation performs a little worse than the previous one. Hence, we will keep less candidates. First, we compare the top five players with the previous run. In this concrete example only two players are better than the last best five. We then also select the third player, because this is the minimum number of retained candidates. The main idea behind this lower limit is, that we do not want to throw away too much information.
 
@@ -324,7 +324,7 @@ In our current implementation we have the input parameter ``is moving'' (see sec
 
 \subsection{Dealing with springs}
 
-The springs make the doodler jump very high. Normally, the two platforms above the platform with a spring would be the next two input platforms. But the high jump makes those two platforms move out of the bounds. Also other platforms would become reachable. Right after the doodler jumps on a spring the vertical speed is much higher than after a regular jump as well. We made use of this characteristic to create a solution.
+The springs make the doodler jump very high. Normally, the two platforms above the platform with a spring would be the next two input platforms. But the high jump makes those two platforms move out of the bounds. Also, other platforms would become reachable. Right after the doodler jumps on a spring the vertical speed is much higher than after a regular jump as well. We made use of this characteristic to create a solution.
 
 Our application waits until the vertical velocity reduces to the velocity which the doodler would have after a regular jump. Then we make the two platforms above the doodler the input platforms.
 
@@ -332,11 +332,11 @@ Our application waits until the vertical velocity reduces to the velocity which 
 
 In our current application the neural networks seem to learn to either always jump on the next platform or to always jump on the second next platform. When you observe the games in an early state (e.g. in generation 20) the doodler sometimes focuses the next and sometimes the second next platform. Anyhow, in a later state it only focuses the second next platform in most of the runs. In a few runs it learns to only focus the next platform. Even breakable platforms are focused. We have a ``is breakable'' boolean in the input parameters which does not seem to help to prevent jumping on these types of platforms.
 
-For us this is difficult to comprehend. We also tried to increase the number of breakable platforms to make the learning easier. It did not improve anything, though. Maybe the genetic algorithm needs more time to learn how to avoid the breakable platforms. Adjusting some of the parameters of the machine learning component might helps as well. Unfortunately, we did not find a good solution, yet. This is an issue which could be addressed during the future work (see section \ref{sec:cafw}).
+For us this is difficult to comprehend. We also tried to increase the number of breakable platforms to make the learning easier. It did not improve anything, though. Maybe the genetic algorithm needs more time to learn how to avoid the breakable platforms. Adjusting some of the parameters of the machine learning component might help as well. Unfortunately, we did not find a good solution, yet. This is an issue which could be addressed during the future work (see section \ref{sec:cafw}).
 
 \subsection{Comparison to other project}
 
-Figure \ref{fig:perf_other} shows the performance of the reinforceinforcement learning approach which we mentioned in section \ref{sec:rw}. Figure \ref{fig:our_perf} shows a similar diagram of our performance. You can see that the scores in our application stop to increase around generation 500. This is mainly because of the doodler tries to jump on breakable platforms that we described in the previous section. The performance of the reinforcement learning approach tells us that there is still potatial for improvement in our application.
+Figure \ref{fig:perf_other} shows the performance of the reinforcement learning approach which we mentioned in section \ref{sec:rw}. Figure \ref{fig:our_perf} shows a similar diagram of our performance. You can see that the scores in our application stop to increase around generation 500. This is mainly because of the doodler tries to jump on breakable platforms that we described in the previous section. The performance of the reinforcement learning approach tells us that there is still potential for improvement in our application.
 
 \begin{figure}
 \centering
